TODO:
-inline
- Alpha to prevent regernerating background.
- background stretching.
- volume accel structure.
- log time accel structures.

Version 1.3:

Version 1.2:
-Bugfixes and performance improvements.

Version 1.1:
-Added multi-touch support.
-fixed race condition in the fps and ray counter.
-Performance optimizations.