@@ -1,106 +1,0 @@
-
-#define  LOG_TAG    "libplasma"
-#define  LOGI(...)  __android_log_print(ANDROID_LOG_INFO,LOG_TAG,__VA_ARGS__)
-
-/* simple stats management */
-typedef struct {
-    double  renderTime;
-    double  frameTime;
-} FrameStats;
-
-#define  MAX_FRAME_STATS  200
-#define  MAX_PERIOD_MS    1500
-
-typedef struct {
-    double  firstTime;
-    double  lastTime;
-    double  frameTime;
-
-    int         firstFrame;
-    int         numFrames;
-    FrameStats  frames[ MAX_FRAME_STATS ];
-} Stats;
-
-/* Return current time in milliseconds */
-static double now_ms(void)
-{
-    struct timeval tv;
-    gettimeofday(&tv, NULL);
-    return tv.tv_sec*1000. + tv.tv_usec/1000.;
-}
-
-static void
-stats_init( Stats*  s )
-{
-    s->lastTime = now_ms();
-    s->firstTime = 0.;
-    s->firstFrame = 0;
-    s->numFrames  = 0;
-}
-
-static void
-stats_startFrame( Stats*  s )
-{
-    s->frameTime = now_ms();
-}
-
-static void
-stats_endFrame( Stats*  s )
-{
-    double now = now_ms();
-    double renderTime = now - s->frameTime;
-    double frameTime  = now - s->lastTime;
-    int nn;
-
-    if (now - s->firstTime >= MAX_PERIOD_MS) {
-        if (s->numFrames > 0) {
-            double minRender, maxRender, avgRender;
-            double minFrame, maxFrame, avgFrame;
-            int count;
-
-            nn = s->firstFrame;
-            minRender = maxRender = avgRender = s->frames[nn].renderTime;
-            minFrame  = maxFrame  = avgFrame  = s->frames[nn].frameTime;
-            for (count = s->numFrames; count > 0; count-- ) {
-                nn += 1;
-                if (nn >= MAX_FRAME_STATS)
-                    nn -= MAX_FRAME_STATS;
-                double render = s->frames[nn].renderTime;
-                if (render < minRender) minRender = render;
-                if (render > maxRender) maxRender = render;
-                double frame = s->frames[nn].frameTime;
-                if (frame < minFrame) minFrame = frame;
-                if (frame > maxFrame) maxFrame = frame;
-                avgRender += render;
-                avgFrame  += frame;
-            }
-            avgRender /= s->numFrames;
-            avgFrame  /= s->numFrames;
-
-            LOGI("frame/s (avg,min,max) = (%.1f,%.1f,%.1f) "
-                 "render time ms (avg,min,max) = (%.1f,%.1f,%.1f)\n",
-                 1000./avgFrame, 1000./maxFrame, 1000./minFrame,
-                 avgRender, minRender, maxRender);
-        }
-        s->numFrames  = 0;
-        s->firstFrame = 0;
-        s->firstTime  = now;
-    }
-
-    nn = s->firstFrame + s->numFrames;
-    if (nn >= MAX_FRAME_STATS)
-        nn -= MAX_FRAME_STATS;
-
-    s->frames[nn].renderTime = renderTime;
-    s->frames[nn].frameTime  = frameTime;
-
-    if (s->numFrames < MAX_FRAME_STATS) {
-        s->numFrames += 1;
-    } else {
-        s->firstFrame += 1;
-        if (s->firstFrame >= MAX_FRAME_STATS)
-            s->firstFrame -= MAX_FRAME_STATS;
-    }
-
-    s->lastTime = now;
-}
