@@ -1,11 +1,14 @@
 TODO:
--inline
-- Alpha to prevent regernerating background.
+- struct color3f?
+- fix bitmap race condition
+- inline
 - background stretching.
 - volume accel structure.
 - log time accel structures.
 
 Version 1.3:
+- Alpha-caching background.
+- Background scaling (todo)
 
 Version 1.2:
 -Bugfixes and performance improvements.
